aarch32: mov immediate generates incorrect value for some immediate values

XMLWordPrintable

    • inapplicable
    • aarch32
    • linux

      Mov immediate may generate incorrect values for immediate where the bottom bits are all zero.

      This is because it used movt to mov the upper 16 bits into the top of the register, however the movt instruction does not clear the bottom 16 bits.

            Assignee:
            Ed Nevill
            Reporter:
            Ed Nevill
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: