8146339: aarch32: mov immediate generates incorrect value for some immediate values Summary: Use movw/movt instead of just movt for immediates with bottom 16 bits 0 Reviewed-by: duke Contributed-by: xiang.yuan@linaro.org